[package]
name = "skrillax-client-patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
pk2 = "0.2.0"
speedy = "0.8.7"
tokio = { version = "1.41.0", features = ["net", "rt", "io-std", "io-util", "macros"] }
tokio-util = "0.7.12"
